wip for Identity4J; very close